# aed3-trab1

./: .gitignore  meson.build  report.md  run.sh  times.md  times.ms
logs/: 2021-05-20T00:53:57-03:00.txt  2021-05-20T01:07:58-03:00.txt  2021-05-20T01:16:24-03:00.txt  2021-05-20T01:25:06-03:00.txt  2021-05-20T01:34:56-03:00.txt  2021-05-20T01:45:26-03:00.txt
src/: main.cpp  utils.hpp
src/tsp/: approx.hpp  bf.hpp  data.hpp
